--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,4 +93,4 @@ flutter:
   - assets/crocodile_passive.png
   - assets/crocodile_angry.png
   - assets/meat.jpeg
-  - assets/heart.png
+  - assets/heart.jpeg
